--- a/index.html
+++ b/index.html
@@ -12,6 +12,41 @@
 		<div class="container">
 			<h1>K(ammusu)-means法</h1>
 			<svg id="svg"></svg>
+			<form class="form-horizontal">
+				<button type="button" class="btn btn-primary">ステップ</button>
+				<button type="button" class="btn btn-default">最初から</button>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">横軸</label>
+					<div class="col-sm-10">
+						<select class="form-control">
+							<option>乳</option>
+							<option>尻</option>
+							<option>R-18</option>
+							<option>提督LOVE</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">縦軸</label>
+					<div class="col-sm-10">
+						<select class="form-control">
+							<option>乳</option>
+							<option>尻</option>
+							<option>R-18</option>
+							<option>提督LOVE</option>
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">スケール</label>
+					<div class="col-sm-10">
+						<select class="form-control">
+							<option>線形</option>
+							<option>対数</option>
+						</select>
+					</div>
+				</div>
+			</form>
 		</div>
 	</body>
 </html>
