--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<h1>K(ammusu)-means法</h1>
 			<svg id="svg"></svg>
 			<form class="form-horizontal">
-				<button type="button" class="btn btn-primary">ステップ</button>
-				<button type="button" class="btn btn-default">最初から</button>
+				<button type="button" class="btn btn-primary" id="step">ステップ</button>
+				<button type="button" class="btn btn-default" id="reset">最初から</button>
 				<div class="form-group">
 					<label class="col-sm-2 control-label">横軸</label>
 					<div class="col-sm-10">
