--- a/index.html
+++ b/index.html
@@ -16,24 +16,32 @@
 				<button type="button" class="btn btn-primary" id="step">ステップ</button>
 				<button type="button" class="btn btn-default" id="reset">最初から</button>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">横軸</label>
+					<label class="col-sm-2 control-label">縦軸</label>
 					<div class="col-sm-10">
-						<select class="form-control">
-							<option>乳</option>
-							<option>尻</option>
-							<option>R-18</option>
-							<option>提督LOVE</option>
+						<select class="form-control" name="y">
+							<option value="乳">乳</option>
+							<option value="尻">尻</option>
+							<option value="百合">百合</option>
+							<option value="R-18">R-18</option>
+							<option value="パンツ">パンツ</option>
+							<option value="最高だぜ" selected>最高だぜ</option>
+							<option value="提督LOVE">提督LOVE</option>
+							<option value="users">users</option>
 						</select>
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">縦軸</label>
+					<label class="col-sm-2 control-label">横軸</label>
 					<div class="col-sm-10">
-						<select class="form-control">
-							<option>乳</option>
-							<option>尻</option>
-							<option>R-18</option>
-							<option>提督LOVE</option>
+						<select class="form-control" name="x">
+							<option value="乳">乳</option>
+							<option value="尻">尻</option>
+							<option value="百合">百合</option>
+							<option value="R-18" selected>R-18</option>
+							<option value="パンツ">パンツ</option>
+							<option value="最高だぜ">最高だぜ</option>
+							<option value="提督LOVE">提督LOVE</option>
+							<option value="users">users</option>
 						</select>
 					</div>
 				</div>
