--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">スケール</label>
+					<label class="col-sm-2 control-label">モード</label>
 					<div class="col-sm-10">
-						<select class="form-control">
-							<option>線形</option>
-							<option>対数</option>
+						<select class="form-control" name="mode">
+							<option value="kmeans">K-means</option>
+							<option value="em">混合ガウスモデル</option>
 						</select>
 					</div>
 				</div>
