Add GitHub fork me ribbon

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<script src="//localhost:35729/livereload.js?snipver=1" charset="utf-8"></script>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" href="index.css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css">
 	</head>
 	<body>
 		<div class="container">
 			<h1>K(ammusu)-means法</h1>
+			<a class="github-fork-ribbon" href="https://github.com/hakatashi/kammusu-means" title="Fork me on GitHub">Fork me on GitHub</a>
 			<svg id="svg"></svg>
 			<form class="form-horizontal">
 				<button type="button" class="btn btn-primary" id="step">ステップ</button>
@@ -47,7 +49,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">モード</label>
+					<label class="col-sm-2 control-label">モデル</label>
 					<div class="col-sm-10">
 						<select class="form-control" name="mode">
 							<option value="kmeans">K-means</option>
